--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,22 +9,24 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 option(ENABLE_STATIC "Build static (.a) library" ON)
 
-find_package(ZLIB REQUIRED)
+# find_package(ZLIB REQUIRED)
 
-include_directories(${ZLIB_INCLUDE_DIRS})
+# include_directories(${ZLIB_INCLUDE_DIRS})
 
-add_library(cnpy SHARED "cnpy.cpp")
-target_link_libraries(cnpy ${ZLIB_LIBRARIES})
-install(TARGETS "cnpy" LIBRARY DESTINATION lib PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+# add_library(cnpy SHARED "cnpy.cpp")
+# target_link_libraries(cnpy ${ZLIB_LIBRARIES})
+# install(TARGETS "cnpy" LIBRARY DESTINATION lib PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
-if(ENABLE_STATIC)
-    add_library(cnpy-static STATIC "cnpy.cpp")
+# if(ENABLE_STATIC)
+    add_library(cnpy-static STATIC "cnpy.h" "cnpy.cpp")
+    target_include_directories(cnpy-static PUBLIC .)
+    target_link_libraries(cnpy-static zlibstatic)
     set_target_properties(cnpy-static PROPERTIES OUTPUT_NAME "cnpy")
     install(TARGETS "cnpy-static" ARCHIVE DESTINATION lib)
-endif(ENABLE_STATIC)
+# endif(ENABLE_STATIC)
 
-install(FILES "cnpy.h" DESTINATION include)
-install(FILES "mat2npz" "npy2mat" "npz2mat" DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+# install(FILES "cnpy.h" DESTINATION include)
+# install(FILES "mat2npz" "npy2mat" "npz2mat" DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
-add_executable(example1 example1.cpp)
-target_link_libraries(example1 cnpy)
+# add_executable(example1 example1.cpp)
+# target_link_libraries(example1 cnpy)
